# hybridbot

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  chainlit.md  chainlit_fr-FR.md  docker-compose.yml  pyproject.toml  run.bat  run.ps1
.chainlit/: config.toml
.chainlit/translations/: fr-FR.json
.github/workflows/: ci.yml
public/: papa_pro.jfif  readme.js  web.css
scripts/: init_db.py  manage_user.py  schema.sql
src/chatbot/: __init__.py  app.py  auth.py  config.py  constants.py  document_flow.py  document_load.py  flow.py  flow_events.py  flow_ui.py  llm.py  logger.py  messages.py  pdf_loader.py  persistence.py  sqlite.py  validators.py  web.py  web_flow.py
src/chatbot/core/: __init__.py  errors.py  llm.py
src/chatbot/data/: __init__.py  sqlite_layer.py
src/chatbot/utils/: __init__.py  validators.py
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_config.py  test_flow.py  test_flow_events.py  test_flow_ui.py  test_llm.py  test_pdf_loader.py  test_persistence.py  test_sqlite.py  test_validators.py  test_web.py  test_web_flow.py
