[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-hybride"
version = "1.0.0"
description = "Assistant IA Hybride Local/Cloud - Chainlit + Ollama"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Papa Bounama NDIAYE"}
]
keywords = ["chatbot", "ai", "ollama", "chainlit", "hybrid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "chainlit>=2.8.5",
    "ollama>=0.6.0",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pyright>=1.1.0",
    "vulture>=2.10",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["chatbot"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "venv", ".venv"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["venv", ".venv", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
