[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-hybrid-bot"
version = "1.0.0"
description = "Chatbot Chainlit + Ollama"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Papa Bounama NDIAYE"}]

dependencies = [
    "chainlit>=2.8.5",
    "ollama>=0.6.0",
    "opendataloader-pdf>=2.4.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "SQLAlchemy>=2.0.0",
    "greenlet>=3.0.0",
    "aiofiles>=23.0.0",
    "exa-py>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pyright>=1.1.0",
    "vulture>=2.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["chatbot"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning:traceloop.sdk.prompts.model",
]
